--- a/templates/michael.html
+++ b/templates/michael.html
@@ -8,6 +8,7 @@
 {% block body %}
     <!- Try building a new body here ->
     <p><b>Michael was here</b></p>
+    <p><b>Ethan was here</b></p>
 {% endblock %}
 
 <!- Replaced birds with a random image -->
