--- a/templates/greet.html
+++ b/templates/greet.html
@@ -20,10 +20,22 @@
             </form>
         </div>
 
-        <div class="col-12">
-            <img src="/static/assets/PythonFlask.jpeg" style="height: 400px" >
-        </div>
-
     </div>
+{% endblock %}
+
+
+<!- This is turning off birds background from base.html -->
+{% block background %}
+    <head>
+        <style>
+            body{
+                background-image: url('https://images.unsplash.com/photo-1512626120412-faf41adb4874?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');
+                background-size: cover;
+                height: 100vh;
+                padding:0;
+                margin:0;
+            }
+        </style>
+    </head>
 {% endblock %}
 
