Anirudh was here

--- a/templates/michael.html
+++ b/templates/michael.html
@@ -9,6 +9,7 @@
     <!- Try building a new body here ->
     <p><b>Michael was here</b></p>
     <p><b>Ethan was here</b></p>
+    <p><b>Anirudh was here</b></p>
 {% endblock %}
 
 <!- Replaced birds with a random image -->
