--- a/templates/name.html
+++ b/templates/name.html
@@ -10,6 +10,7 @@
     <p><b>Michael was here</b></p>
     <p><b>Ethan was here</b></p>
     <p><b>Anirudh was here</b></p>
+    <p><b>James was here</b></p>
 {% endblock %}
 
 <!- Replaced birds with a random image -->
