--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -18,6 +18,10 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('name') }}>Name</a>
             <a class="nav-link" href={{ url_for('greet') }}>Greet</a>
             <a class="nav-link" href={{ url_for('michael') }}>Michael</a>
+            <a class="nav-link" href={{ url_for('ethan') }}>Ethan</a>
+            <a class="nav-link" href={{ url_for('anirudh') }}>Anirudh</a>
+            <a class="nav-link" href={{ url_for('james') }}>James</a>
+
         </div>
     </div>
 </nav>
