--- a/templates/michael.html
+++ b/templates/michael.html
@@ -3,17 +3,14 @@
 
 <!- This variable sets name of browser tab  -->
 {% set project = "Michael" %}
-{% set overview = "" %}
+
 {% set repo = "https://github.com/NastyEthan/flask_portfolio" %}
-
-
-
 
 {% block background %}
     <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vanta.net.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vanta.dots.min.js') }}"></script>
     <script>
-        VANTA.NET({
+        VANTA.DOTS({
             el: "body",
             mouseControls: true,
             touchControls: true,
