--- a/templates/anirudh.html
+++ b/templates/anirudh.html
@@ -4,25 +4,23 @@
 <!- This variable sets name of browser tab  -->
 {% set project = "Anirudh" %}
 
-<!- This is a replacement block for Body in base.html -->
-{% block body %}
-    <!- Try building a new body here ->
-    <p><b>This is Anirudh's page</b></p>
-{% endblock %}
-
-<!- Replaced birds with a random image -->
+{% set repo = "https://github.com/NastyEthan/flask_portfolio" %}
 
 {% block background %}
-    <title>Name</title>
-    <head>
-        <style>
-            body{
-                background-image: url('https://images.unsplash.com/photo-1621472124503-a760c1146f44?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
-                background-size: cover;
-                height: 100vh;
-                padding:0;
-                margin:0;
-            }
-        </style>
-    </head>
+    <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vanta.dots.min.js') }}"></script>
+    <script>
+        VANTA.DOTS({
+            el: "body",
+            mouseControls: true,
+            touchControls: true,
+            gyroControls: false,
+            minHeight: 200.00,
+            minWidth: 200.00,
+            scale: 1.00,
+            scaleMobile: 1.00,
+            color: 0xbb62fa,
+            color2: 0x20ffb0
+        })
+    </script>
 {% endblock %}
