--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -2,38 +2,34 @@
 This HTML is setup as a fragment allowing it to be "included" by other HTML files via Jinja2
 -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <ul class="navbar-nav mr-auto">
     <a class="navbar-brand" href="https://csp.nighthawkcodingsociety.com/">{{basename}}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <li class="navbar-nav">
-            <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
-            <a class="nav-link" href={{ url_for('index') }}>Portfolio</a>
-            <a class="nav-link" href={{ url_for('kangaroos') }}>Kangaroos</a>
-            <a class="nav-link" href={{ url_for('walruses') }}>Walruses</a>
-            <a class="nav-link" href={{ url_for('hawkers') }}>Hawkers</a>
-            <!-- stub is shown using the name of the route -->
-            <a class="nav-link" href={{ url_for('stub') }}>Stub</a>
-            <a class="nav-link" href={{ url_for('name') }}>Name</a>
-            <a class="nav-link" href={{ url_for('greet') }}>Greet</a>
-        </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/michael/">Michael</a>
-                        <a class="dropdown-item" href="/ethan/">Ethan</a>
-                        <a class="dropdown-item" href="/anirudh/">Anirudh</a>
-                        <a class="dropdown-item" href="/james/">James</a>
-                    </div>
-        </li>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </li>
+        <ul class="navbar-nav mr-auto">
+            <li class="navbar-nav">
+                <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
+                <a class="nav-link" href={{ url_for('index') }}>Portfolio</a>
+                <a class="nav-link" href={{ url_for('kangaroos') }}>Kangaroos</a>
+                <a class="nav-link" href={{ url_for('walruses') }}>Walruses</a>
+                <a class="nav-link" href={{ url_for('hawkers') }}>Hawkers</a>
+                <!-- stub is shown using the name of the route -->
+                <a class="nav-link" href={{ url_for('stub') }}>Stub</a>
+                <a class="nav-link" href={{ url_for('name') }}>Name</a>
+                <a class="nav-link" href={{ url_for('greet') }}>Greet</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Dropdown
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href={{ url_for('michael') }}>Michael</a>
+                    <a class="dropdown-item" href={{ url_for('ethan') }}>Ethan</a>
+                    <a class="dropdown-item" href={{ url_for('anirudh') }}>Anirudh</a>
+                    <a class="dropdown-item" href={{ url_for('james') }}>James</a>
+                </div>
+            </li>
+        </ul>
     </div>
 </nav>
