--- a/templates/ethan.html
+++ b/templates/ethan.html
@@ -4,14 +4,25 @@
 <!- This variable sets name of browser tab  -->
 {% set project = "Ethan" %}
 
-<!- This is a replacement block for Body in base.html -->
-{% block body %}
-    <!- Try building a new body here ->
-    <p>Ethan about page</p>
-{% endblock %}
+{% set repo = "https://github.com/NastyEthan/flask_portfolio" %}
+
 
 <!- This is turning off birds background from base.html -->
 {% block background %}
+    <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vanta.waves.min.js') }}"></script>
+    <script>
+        VANTA.WAVES({
+            el: "body",
+            mouseControls: true,
+            touchControls: true,
+            gyroControls: false,
+            minHeight: 200.00,
+            minWidth: 200.00,
+            scale: 1.00,
+            scaleMobile: 1.00
+        })
+    </script>
     <title>Name</title>
     <head>
         <style>
