James.html commited to github

--- a/templates/james.html
+++ b/templates/james.html
@@ -2,12 +2,12 @@
 {% extends "layouts/base.html" %}
 
 <!- This variable sets name of browser tab  -->
-{% set project = "Anirudh" %}
+{% set project = "James" %}
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
 <!- Try building a new body here ->
-<p><b>This is Anirudh's page</b></p>
+<p><b>This is James's page</b></p>
 {% endblock %}
 
 <!- Replaced birds with a random image -->
