--- a/templates/anirudh.html
+++ b/templates/anirudh.html
@@ -6,11 +6,33 @@
 
 {% set repo = "https://github.com/NastyEthan/flask_portfolio" %}
 
+{% block body %}
+    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
+        <p style="font-family:verdana; font-size:50px" > Anirudh Ramachandran</p>
+    </div>
+
+    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
+
+        <div class="col-12">
+            <p style="font-family:verdana; font-size:20px" > Hello, {{name}}!</p>
+        </div>
+
+        <div class="col-12">
+            <form action="/anirudh/" id="greet" method="POST" >
+                <label for="name">Type a greeting name</label>
+                <input name="name" id="name">
+                <input type="submit" value="Greetings!">
+            </form>
+        </div>
+
+    </div>
+{% endblock %}
+
 {% block background %}
     <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vanta.globe.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vanta.dots.min.js') }}"></script>
     <script>
-        VANTA.GLOBE({
+        VANTA.DOTS({
             el: "body",
             mouseControls: true,
             touchControls: true,
@@ -18,23 +40,9 @@
             minHeight: 200.00,
             minWidth: 200.00,
             scale: 1.00,
-            scaleMobile: 1.00
+            scaleMobile: 1.00,
+            color: 0xbb62fa,
+            color2: 0x20ffb0
         })
     </script>
-{% endblock %}
-{% block body %}
-    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
-
-        <div class="col-12">
-            <p>Hello, {{name}}!</p>
-        </div>
-
-        <div class="col-12">
-            <form action="/anirudh/" id="greet" method="POST" >
-                <label for="name">Type a greeting name?</label>
-                <input name="name" id="name">
-                <input type="submit" value="Greetings!">
-            </form>
-        </div>
-    </div>
 {% endblock %}
