--- a/templates/ethan.html
+++ b/templates/ethan.html
@@ -27,6 +27,10 @@
 
 {% block body %}
     <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
+        <p style="font-family:verdana; font-size:50px" > Ethan Vo</p>
+    </div>
+
+    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
 
         <div class="col-12">
             <p>Hello, {{name}}!</p>
