Updated text and specified how to use the dropdown menu.

--- a/templates/README.html
+++ b/templates/README.html
@@ -8,9 +8,9 @@
 {% block body %}
     <!- Try building a new body here ->
     <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
-    <p>README!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
+    <p>README!</p>
     <p style="..." >Here's how to use the Dropdown.
-    The dropdown links only work if you go to `name`, `stub`, or `greet`
+    The dropdown links only work if you go to `name`, `README`, or `greet`
     The links do not work if you go from our own about.html pages</p>
     </div>
 {% endblock %}
