--- a/templates/anirudh.html
+++ b/templates/anirudh.html
@@ -30,9 +30,9 @@
 
 {% block background %}
     <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vanta.dots.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vanta.globe.min.js') }}"></script>
     <script>
-        VANTA.DOTS({
+        VANTA.GLOBE({
             el: "body",
             mouseControls: true,
             touchControls: true,
