Changed read me text to explain nav bar issues.

--- a/templates/README.html
+++ b/templates/README.html
@@ -12,7 +12,7 @@
     <p style="..." >Here's how to use the Dropdown.
     The dropdown links only work if you go to `name`, `README`, or `greet`.
     The links do not work if you go from our own about.html pages.
-    Every time you want to use the drop down, please click on one of the three listed tabs.</p>
+    Every time you want to use the drop down, please click on one of the three listed tabs above and then click on each team member's page.</p>
     </div>
 {% endblock %}
 
