final touches to minilab page

--- a/templates/Minilab.html
+++ b/templates/Minilab.html
@@ -7,6 +7,11 @@
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
     <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
+        <p style="font-family:verdana; font-size:50px" > https://docs.google.com/document/d/1auhUucagVdUoHKqDXnu66FGK6qM-veyYC3wnXmTDl8s/edit?usp=sharing</p>
+        <p style="font-family:verdana; font-size:50px" > Here's the link to our Video/Journal 0</p>
+    </div>
+
+    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
 
         <div class="col-12">
             <p>Hello, {{name}}!</p>
