--- a/templates/ethan.html
+++ b/templates/ethan.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="col-12">
-            <form action="/ethan/" id="ethan" method="POST" >
+            <form action="/ethan/" id="greet" method="POST" >
                 <label for="name">Type a greeting name?</label>
                 <input name="name" id="name">
                 <input type="submit" value="Greetings!">
