--- a/templates/james.html
+++ b/templates/james.html
@@ -7,14 +7,14 @@
 {% set repo = "https://github.com/NastyEthan/flask_portfolio" %}
 
 {% block body %}
-    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
-        <p style="font-family:verdana; font-size:50px" > James Lee</p>
+    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family:'Poor Richard',serif;">
+        <p style="font-family:'Poor Richard'; font-size:200px" > James Lee</p>
     </div>
 
-    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
+    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: 'Poor Richard',serif;">
 
         <div class="col-12">
-            <p style="font-family:verdana; font-size:20px" > Hello, {{name}}!</p>
+            <p style="font-family:'Poor Richard'; font-size:100px" > Hello, {{name}}!</p>
         </div>
 
         <div class="col-12">
@@ -44,3 +44,4 @@
         })
     </script>
 {% endblock %}
+
