changed font of my page

--- a/templates/anirudh.html
+++ b/templates/anirudh.html
@@ -7,14 +7,14 @@
 {% set repo = "https://github.com/NastyEthan/flask_portfolio" %}
 
 {% block body %}
-    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
-        <p style="font-family:verdana; font-size:50px" > Anirudh Ramachandran</p>
+    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: 'Wide Latin',serif;">
+        <p style="font-family:'sans-serif '; font-size:150px" > Anirudh Ramachandran</p>
     </div>
 
     <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
 
         <div class="col-12">
-            <p style="font-family:verdana; font-size:20px" > Hello, {{name}}!</p>
+            <p style="font-family:'Vladimir Script'; font-size:100px" > Hello, {{name}}!</p>
         </div>
 
         <div class="col-12">
