--- a/templates/james.html
+++ b/templates/james.html
@@ -30,9 +30,9 @@
 
 {% block background %}
     <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vanta.fog.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vanta.cells.min.js') }}"></script>
     <script>
-        VANTA.FOG({
+        VANTA.CELLS({
             el: "body",
             mouseControls: true,
             touchControls: true,
