--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -46,7 +46,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         }
 
         a {
-            color: midnightblue;
+            color: #4c7019;
         }
 
         .fa{
