--- a/templates/binary.html
+++ b/templates/binary.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-{% extends "layouts/layout.html" %}
-
+{% extends "layouts/base.html" %}
 <!-- Search for all the Hack: below for hack-a-thon and mini-lab requirements -->
 <!-- need to adjust Templates to start -->
 
@@ -19,7 +18,7 @@
 {% set msgTurnOn = "Turn On" %}
 {% set msgTurnOff = "Turn Off" %}
 
-{% block meta %}
+{% block body %}
 <title>Binary page</title>
 <script>
   const BITS = '{{ BITS }}'; let max = '{{ MAX }}'; let MAX = parseInt(max, 10);
@@ -110,9 +109,7 @@
     }
   }
 </script>
-{% endblock %}
 
-{% block content %}
 <h1 class="text-center">Binary Math with Conversions</h1>
 <div class="container">
   <div class="row justify-content-md-center">
@@ -160,4 +157,7 @@
 
   </div>
 </div>
+{% endblock %}
+
+{% block background %}
 {% endblock %}
