changed font color

--- a/templates/anirudh.html
+++ b/templates/anirudh.html
@@ -8,7 +8,7 @@
 
 {% block body %}
     <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: 'Wide Latin',serif;">
-        <p style="font-family:'sans-serif '; font-size:150px" > Anirudh Ramachandran</p>
+        <p style="font-family:'sans-serif '; font-size:150px; color: #2b425b" > Anirudh Ramachandran</p>
     </div>
 
     <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
