added embeds to minilab page and changed background

--- a/templates/Minilab.html
+++ b/templates/Minilab.html
@@ -10,6 +10,16 @@
     <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif; font-size:30px">
         <p> Here's the link to our Video/Journal 0 </p>
         <a href="https://kapwi.ng/c/yKfJ5MqCfP" > Tech Talk 0.*   </a>
+        <p> Here's the link to our Brain Write </p>
+        <a href="https://docs.google.com/document/d/1t31XtKqvTwIF9UPtYcyjFa9-WkKPoQgcxXxMfE8rbKc/edit?usp=sharing" > Brain Write  </a>
+        <p> Here's the link to our Updated Wire Frame for the Unique Planner </p>
+        <a href="https://www.figma.com/file/9eItLJPgtgRwK6GugaUwrl/Unique-Planner?node-id=0%3A1g" > Wire Frame  </a>
+        <p> Here's the link to Micheal and James's TPT 3 (in our individual journals) </p>
+        <a href="https://docs.google.com/document/d/1Kcb8k2XW2PODSQW_EKFYb1XKB39VrwB-OEAnCMM7Frs/edit?usp=sharing" > TPT 3 </a>
+        <p> Here's the link to Ethan and Anirudh's TPT 3 (in our individual journals) </p>
+        <a href="https://docs.google.com/document/d/1Kcb8k2XW2PODSQW_EKFYb1XKB39VrwB-OEAnCMM7Frs/edit?usp=sharinghttps://docs.google.com/document/d/1-AS5NcpL8dvRFaj1oww0tR8XM1lf20oFSDFuEdq7OxQ/edit?usp=sharing" > TPT 3 </a>
+        <p> Here's the link to our Greet Commit </p>
+        <a href="https://github.com/NastyEthan/flask_portfolio/commit/6e82d0aa8279dfd8a3a561c14f798c67f4d6bdd7" > Commit  </a>
     </div>
 
     <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif; font-size:30px">
@@ -35,7 +45,7 @@
     <head>
         <style>
             body{
-                background-image: url('https://images.unsplash.com/photo-1513151233558-d860c5398176?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+                background-image: url('https://wallpaperaccess.com/full/46497.png');
                 background-size: cover;
                 height: 100vh;
                 padding:0;
