updated navbar.html to remove the dropdown for our `html` pages and moved minilab to a dropdown. binary font to basic and removed some stuff from michael.html

--- a/templates/binary.html
+++ b/templates/binary.html
@@ -114,9 +114,9 @@
 <h1 class="text-center">Binary Math with Conversions</h1>
 
 <form class="text-center" action="/binary/" id="bits" method="POST" >
-    <label style="font-family:'fangsong'"; for="bits">Please Enter A Value For the # of Bits</label>
-    <input style="font-family:'fangsong'"; name="bits">
-    <input style="font-family:'fangsong'; font-weight:900"; type="submit" value="ree!">
+    <label for="bits">Please Enter A Value For the Number of Bits</label>
+    <input name="bits">
+    <input style="font-weight:900"; type="submit" value="Go!">
 </form>
 
 <div class="container">
