--- a/templates/michael.html
+++ b/templates/michael.html
@@ -16,7 +16,7 @@
             <input style="font-family:'fangsong'; font-weight:900"; type="submit" value="Greetings!">
         </form>
     </div>
-
+<!-- Columns
     <div class="container "style = "left:80px; top:30px" >
         <div class="row">
             <div class="col-sm">
@@ -30,8 +30,9 @@
             </div>
         </div>
     </div>
-
+-->
     <!-- testing bootstrap grids -->
+    <!-- Tables
     <table class="table table-light table-bordered table-striped" style="left:80px; top:30px">
         <thead>
         <tr>
@@ -93,6 +94,7 @@
         </tr>
         </tbody>
     </table>
+    -->
 
 {% endblock %}
 
