--- a/templates/README.html
+++ b/templates/README.html
@@ -10,9 +10,9 @@
     <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
     <p>README!</p>
     <p style="..." >Here's how to use the Dropdown.
-    The dropdown links only work if you go to `name`, `README`, or `greet`.
+    The dropdown links only work if you go to `README`.
     The links do not work if you go from our own about.html pages.
-    Every time you want to use the drop down, please click on one of the three listed tabs above and then click on each team member's page.</p>
+    Every time you want to use the drop down, please click the 'README' tab and then click on any of the minilabs.</p>
     </div>
 {% endblock %}
 
