--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -18,6 +18,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                 <a class="nav-link" href={{ url_for('ethan') }}>Ethan</a>
                 <a class="nav-link" href={{ url_for('anirudh') }}>Anirudh</a>
                 <a class="nav-link" href={{ url_for('james') }}>James</a>
+                <a class="nav-link" href={{ url_for('About') }}>About</a>
             <li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
