--- a/templates/About.html
+++ b/templates/About.html
@@ -2,6 +2,12 @@
 {% extends "layouts/base.html" %}
 
 {% block background %}
+    <html>
+    <head>
+    </head>
+    <body style="background-color:cadetblue;">
+    </body>
+    </html>
 {% endblock %}
     {% block body %}
 
@@ -13,19 +19,19 @@
             <div class="row">
         <div class="col-sm-2 offset-sm-1">
             <img src="/static/assets/michaelprofile.gif" alt="Michael's picture" style="width: 200px; height: 200px;" >
-            <a href="/michael/"> Michael Chen </a>
+            <a style="color:white"; href="/michael/"> Michael Chen </a>
         </div>
         <div class="col-sm-2">
             <img src="/static/assets/ethanprofile.jpg" alt="Ethan's picture" style="width: 200px; height: 200px;">
-            <a href="/ethan/"> Ethan Vo </a>
+            <a style="color:white"; href="/ethan/">  Ethan Vo </a>
         </div>
         <div class="col-sm-2">
             <img src="/static/assets/anirudhprofile.jpg" alt="Anirudh's picture" style="width: 200px; height: 200px;">
-            <a href="/anirudh/"> Anirudh Ramachandran </a>
+            <a style="color:white"; href="/anirudh/"> Anirudh Ramachandran </a>
         </div>
         <div class="col-sm-2">
             <img src="/static/assets/jamesprofile.jpg" alt="James's picture" style="width: 200px; height: 200px;">
-            <a href="/james/"> James Lee </a>
+            <a style="color:white"; href="/james/"> James Lee </a>
         </div>
     </div>
 </div>
