--- a/templates/README.html
+++ b/templates/README.html
@@ -18,4 +18,10 @@
 
 <!- This is turning off birds background from base.html -->
 {% block background %}
+    <html>
+    <head>
+    </head>
+    <body style="background-color:darkslategrey;">
+    </body>
+    </html>
 {% endblock %}
