--- a/templates/README.html
+++ b/templates/README.html
@@ -6,22 +6,34 @@
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
-    <!- Try building a new body here ->
-    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
-    <p>README!</p>
-    <p style="..." >Here's how to use the Dropdown.
+    <style>
+    center {
+        font-family: monospace;
+        font-size: 60px;
+        color: aliceblue;
+    }
+    p {
+        font-family: monospace;
+        display: block;
+        text-align: center;
+    }
+    {
+
+    }
+    body {
+        background-color: darkslategrey;
+    }
+    </style>
+    <center>README!</center>
+    <p>Here's how to use the Dropdown.
     The dropdown links only work if you go to `README`.
     The links do not work if you go from our own about.html pages.
     Every time you want to use the drop down, please click the 'README' tab and then click on any of the minilabs.</p>
+
+    <a style="font-family: monospace; font-size: 20px; display:block; text-align:center; color: deepskyblue; text-decoration: underline;"href="https://github.com/NastyEthan/flask_portfolio/blob/main/README.md" target="_blank">GitHub README.md</a>
     </div>
 {% endblock %}
 
 <!- This is turning off birds background from base.html -->
 {% block background %}
-    <html>
-    <head>
-    </head>
-    <body style="background-color:darkslategrey;">
-    </body>
-    </html>
 {% endblock %}
