made binary2.html, implemented 'hacks' with James

--- a/templates/binary.html
+++ b/templates/binary.html
@@ -137,7 +137,7 @@
 <form class="text-center" action="/binary/" id="bits" method="POST" >
     <label for="bits">Please Enter A Value For the Number of Bits</label>
     <input name="bits">
-    <input style="font-weight:900"; type="submit" value="Go!">
+    <input style="font-family:'Vladimir Script'; font-size:15px" type="submit" value="Go!">
 </form>
 
 <div class="container">
