--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -28,6 +28,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <a class="dropdown-item" href="https://docs.google.com/document/d/1-AS5NcpL8dvRFaj1oww0tR8XM1lf20oFSDFuEdq7OxQ/edit?usp=sharing" target="_blank">Ethan and Anirudh's Journal</a>
                     <a class="dropdown-item" href="https://github.com/NastyEthan/flask_portfolio/commit/6e82d0aa8279dfd8a3a561c14f798c67f4d6bdd7" target="_blank">Greet Commit</a>
                     <a class="dropdown-item" href={{ url_for('binary') }}>Binary</a>
+                    <a class="dropdown-item" href={{ url_for('binary2') }}>Binary2</a>
                 </div>
             </li>
         </ul>
