--- a/templates/binary2.html
+++ b/templates/binary2.html
@@ -14,8 +14,8 @@
 <!-- Hack: Set bulbs and pass as variables via Python render_template
            add new images (ie PNGs) to project -->
 <!-- use your PNGs as default -->
-{% set imgBulbOn = "/static/assets/bulb_on.gif" %}
-{% set imgBulbOff = "/static/assets/bulb_off.png" %}
+{% set imgBulbOn2 = "/static/assets/bulb_on2.gif" %}
+{% set imgBulbOff2 = "/static/assets/bulb_off2.png" %}
 {% set msgTurnOn = "Turn On" %}
 {% set msgTurnOff = "Turn Off" %}
 
@@ -79,13 +79,13 @@
             const image = document.getElementById('bulb' + i);
             const butt = document.getElementById('butt' + i);
             // Change digit and visual
-            if (image.src.match("{{ imgBulbOn }}")) {
+            if (image.src.match("{{ imgBulbOn2 }}")) {
                 dig.value = 0;
-                image.src = "{{ imgBulbOff }}";
+                image.src = "{{ imgBulbOff2 }}";
                 butt.innerHTML = "{{ msgTurnOn }}";
             } else {
                 dig.value = 1;
-                image.src = "{{ imgBulbOn }}";
+                image.src = "{{ imgBulbOn2 }}";
                 butt.innerHTML = "{{ msgTurnOff }}";
             }
             // Binary numbers
@@ -111,10 +111,10 @@
                 let digit = binary.substr(i, 1);
                 document.getElementById('digit' + i).value = digit;
                 if (digit === "1") {
-                    document.getElementById('bulb' + i).src = "{{ imgBulbOn }}";
+                    document.getElementById('bulb' + i).src = "{{ imgBulbOn2 }}";
                     document.getElementById('butt' + i).innerHTML = "{{ msgTurnOff }}";
                 } else {
-                    document.getElementById('bulb' + i).src = "{{ imgBulbOff }}";
+                    document.getElementById('bulb' + i).src = "{{ imgBulbOff2 }}";
                     document.getElementById('butt' + i).innerHTML = "{{ msgTurnOn }}";
                 }
             }
@@ -155,7 +155,7 @@
                 <table class="table">
                     <tr>
                         {% for i in range(BITS) %}
-                            <td><img class="img-responsive py-3" id="bulb{{i}}" src="{{ imgBulbOff }}" alt="" width="40" height="Auto">
+                            <td><img class="img-responsive py-3" id="bulb{{i}}" src="{{ imgBulbOff2 }}" alt="" width="40" height="Auto">
                                 <button type="button" id="butt{{i}}" onclick="toggleBit('{{i}}')">{{ msgTurnOn }}</button>
                             </td>
                         {% endfor %}
