Added cat.jpg and dog.jpg along with Radio Button on binary2.html.

--- a/templates/binary2.html
+++ b/templates/binary2.html
@@ -170,6 +170,20 @@
 
         </div>
     </div>
+<p>Select Pet:</p>
+
+<div>
+    <input type="radio" id="Dog" name="pet" value="Dog"
+           checked>
+    <label for="dog">Dog</label>
+</div>
+
+<div>
+    <input type="radio" id="Cat" name="pet" value="Cat">
+    <label for="cat">Cat</label>
+</div>
+
+
 {% endblock %}
 
 {% block background %}
