--- a/templates/binary2.html
+++ b/templates/binary2.html
@@ -183,7 +183,13 @@
     <label for="cat">Cat</label>
 </div>
 
+    <div class="col-sm-2">
+        <img src="/static/assets/dog.jpg" alt="Dog's picture" style="width: 150px; height: 150px;">
+    </div>
 
+    <div class="col-sm-2">
+        <img src="/static/assets/cat.jpg" alt="Cat's picture" style="width: 150px; height: 150px;">
+    </div>
 {% endblock %}
 
 {% block background %}
