Added catoff.jpg and caton.jpg also renamed dog to dogon.jpg and cat to caton.jpg

--- a/templates/binary2.html
+++ b/templates/binary2.html
@@ -184,11 +184,10 @@
 </div>
 
     <div class="col-sm-2">
-        <img src="/static/assets/dog.jpg" alt="Dog's picture" style="width: 150px; height: 150px;">
+        <img src="/static/assets/dogon.jpg" alt="Dog's picture" style="width: 150px; height: 150px;">
     </div>
-
     <div class="col-sm-2">
-        <img src="/static/assets/cat.jpg" alt="Cat's picture" style="width: 150px; height: 150px;">
+        <img src="/static/assets/caton.jpg" alt="Cat's picture" style="width: 150px; height: 150px;">
     </div>
 {% endblock %}
 
