--- a/templates/binary2.html
+++ b/templates/binary2.html
@@ -173,14 +173,14 @@
 <p>Select Pet:</p>
 
 <div>
-    <input type="radio" id="Dog" name="pet" value="Dog"
-           checked>
-    <label for="dog">Dog</label>
+    <input type="radio" id="Dog" name="pet" value="Dog">
+        <a href="/binarywithdog/"> Dog </a>
+    </div>
 </div>
 
 <div>
     <input type="radio" id="Cat" name="pet" value="Cat">
-    <label for="cat">Cat</label>
+    <a href="/binarywithcat/"> Cat </a>
 </div>
 
     <div class="col-sm-2">
