added test button for Anirudh

--- a/templates/planner.html
+++ b/templates/planner.html
@@ -22,6 +22,7 @@
             font-size: 90px;
         }
 
+
     </style>
     <title>Nighthawk Coding | Planner</title>
 </head>
@@ -31,6 +32,10 @@
 <div style="margin-left: 50px">
     <h1>PLANNER</h1>
     <p>This will be where we will build the main project - <b>a daily planner</b></p>
+
+    <!-- button that leads to the repo, can style the button in css above -->
+    <a href="https://github.com/NastyEthan/flask_portfolio" target="_blank" class="btn">BUTTON-TEST</a>
+
 </div>
 </body>
 
