added binary links to personal htmls and planner to nav bar

--- a/templates/anirudh.html
+++ b/templates/anirudh.html
@@ -24,7 +24,7 @@
                 <input type="submit" value="Greetings!">
             </form>
         </div>
-
+        <a href={{ url_for('binary2') }}>Binary2 Progess</a>
     </div>
 {% endblock %}
 
