--- a/templates/ethan.html
+++ b/templates/ethan.html
@@ -43,6 +43,6 @@
                 <input type="submit" value="Greetings!">
             </form>
         </div>
-
+        <a href={{ url_for('binary') }}>Binary Progess</a>
     </div>
 {% endblock %}
