--- a/templates/michael.html
+++ b/templates/michael.html
@@ -15,6 +15,7 @@
             <input style="font-family:'fangsong'"; name="name" id="name">
             <input style="font-family:'fangsong'; font-weight:900"; type="submit" value="Greetings!">
         </form>
+        <a href={{ url_for('binary') }}>Binary Progess</a>
     </div>
 <!-- Columns
     <div class="container "style = "left:80px; top:30px" >
