updated planner page

--- a/templates/planner.html
+++ b/templates/planner.html
@@ -31,10 +31,13 @@
 {% include "layouts/navbar.html" %}
 <div style="margin-left: 50px">
     <h1>PLANNER</h1>
-    <p>This will be where we will build the main project - <b>a daily planner</b></p>
+    <p>This will be where we will build the main project - <b>a daily planner with alarms for tests, homework, etc.</b></p>
 
     <!-- button that leads to the repo, can style the button in css above -->
-    <a href="https://github.com/NastyEthan/flask_portfolio" target="_blank" class="btn">BUTTON-TEST</a>
+    <a href="https://github.com/NastyEthan/flask_portfolio" target="_blank" class="btn">Schedule and Calender </a>
+    <a href="https://github.com/NastyEthan/flask_portfolio" target="_blank" class="btn">Tests </a>
+    <a href="https://github.com/NastyEthan/flask_portfolio" target="_blank" class="btn">Homework and Timing </a>
+    <a href="https://github.com/NastyEthan/flask_portfolio" target="_blank" class="btn">Alarms </a>
 
 </div>
 </body>
