I added a way to go back to lightbulbs from dogs and cats

--- a/templates/binarywithcat.html
+++ b/templates/binarywithcat.html
@@ -171,6 +171,10 @@
         </div>
     </div>
 
+<div>
+    <input type="radio" id="Binary2" name="Binary2" value=Binary2">
+    <a href="/binary2/"> Binary2 </a>
+</div>
 {% endblock %}
 
 {% block background %}
