--- a/templates/binary2.html
+++ b/templates/binary2.html
@@ -170,26 +170,29 @@
 
         </div>
     </div>
-<p>Select Pet:</p>
-
-<div>
-    <input type="radio" id="Dog" name="pet" value="Dog">
-        <a href="/binarywithdog/"> Dog </a>
+    <center>Select Pet:</center>
+    <div class="container" style="margin-left: 300px; width: 1000px">
+        <div class="row justify-content-md-center">
+            <div class="col-sm-2">
+                <input type="radio" id="Dog" name="pet" value="Dog">
+                <a href="/binarywithdog/"> Dog </a>
+            </div>
+            <div class="col-sm-2">
+                <input type="radio" id="Cat" name="pet" value="Cat">
+                <a href="/binarywithcat/"> Cat </a>
+            </div>
+        </div>
+        <div class="row justify-content-md-center" >
+            <div class="col-sm-2">
+                <img src="/static/assets/dogon.jpg" alt="Dog's picture" style="width: 70%; height: 70%;">
+            </div>
+            <div class="col-sm-2">
+                <img src="/static/assets/caton.jpg" alt="Cat's picture" style="width: 70%; height: 70%;">
+            </div>
+        </div>
     </div>
-</div>
 
-<div>
-    <input type="radio" id="Cat" name="pet" value="Cat">
-    <a href="/binarywithcat/"> Cat </a>
-</div>
-
-    <div class="col-sm-2">
-        <img src="/static/assets/dogon.jpg" alt="Dog's picture" style="width: 150px; height: 150px;">
-    </div>
-    <div class="col-sm-2">
-        <img src="/static/assets/caton.jpg" alt="Cat's picture" style="width: 150px; height: 150px;">
-    </div>
-{% endblock %}
+    </div>{% endblock %}
 
 {% block background %}
 {% endblock %}
